--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20070802-1) unstable; urgency=low
+
+  * New upstream snapshot:
+    - Don't drop to_ds frames in driver if not in monitor mode.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Aug 2007 13:57:18 +0200
+
 rt73-legacy (0.0.0.dfsg.1+cvs20070731-1) unstable; urgency=low
 
   * New upstream snapshot:
