--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20070802-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Aug 2007 13:58:59 +0200
+
 rt73-legacy (0.0.0.dfsg.1+cvs20070802-1) unstable; urgency=low
 
   * New upstream snapshot:
