--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-rt73-legacy (0.0.0.dfsg.1+cvs20070802-2) UNRELEASED; urgency=low
+rt73-legacy (0.0.0.dfsg.1+cvs20070805-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream snapshot:
+    - Fix compiling on rt kernels.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Aug 2007 13:58:59 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 05 Aug 2007 01:04:46 +0200
 
 rt73-legacy (0.0.0.dfsg.1+cvs20070802-1) unstable; urgency=low
 
