* rt73-fwcutter, not rt73-legacy-firmware.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 rt73-legacy (0.0.0.dfsg.1+cvs20070805-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * rt73-fwcutter, not rt73-legacy-firmware.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 05 Aug 2007 02:08:17 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 06 Aug 2007 01:19:52 +0200
 
 rt73-legacy (0.0.0.dfsg.1+cvs20070805-1) unstable; urgency=low
 
