* New upstream release:   - Fix 2.6 compile problem w/prev patch. Discovery/diagnosis/resolution     by xqterry.   - Fix Bug #1763773 - does not build on 2.6.5. Needed for early 2.6    series kernels.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-rt73-legacy (0.0.0.dfsg.1+cvs20070805-2) UNRELEASED; urgency=low
+rt73-legacy (0.0.0.dfsg.1+cvs20070822-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream release:
+    - Fix 2.6 compile problem w/prev patch. Discovery/diagnosis/resolution
+      by xqterry.
+    - Fix Bug #1763773 - does not build on 2.6.5. Needed for early 2.6
+     series kernels.
   * rt73-fwcutter, not rt73-legacy-firmware.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 06 Aug 2007 01:19:52 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 22 Aug 2007 15:34:07 +0200
 
 rt73-legacy (0.0.0.dfsg.1+cvs20070805-1) unstable; urgency=low
 
