[svn-upgrade] Integrating new upstream version, rt73-legacy (0.0.0.dfsg.1+cvs20070904)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,6 +23,8 @@
  Changelog for 802.11g rt73 driver
 
  Version: CVS
+	* Fix vendor and product endian conversion in probe. Patch by chris_ppc
+	  extended to 2.4 conditional compile path.
 	* Fix 2.6 compile problem w/prev patch. Discovery/diagnosis/resolution
 	  by xqterry.
 	* Fix Bug #1763773 - does not build on 2.6.5. Needed for early 2.6
