--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20070904-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 04 Sep 2007 12:58:06 +0200
+
 rt73-legacy (0.0.0.dfsg.1+cvs20070904-1) unstable; urgency=low
 
   * New upstream release:
