--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20070910-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 10 Sep 2007 00:56:43 +0200
+
 rt73-legacy (0.0.0.dfsg.1+cvs20070910-1) unstable; urgency=low
 
   * New upstream snapshot:
