--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 rt73-legacy (0.0.0.dfsg.1+cvs20070910-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * add VCS control headers.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 10 Sep 2007 00:56:43 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Sep 2007 20:20:45 +0200
 
 rt73-legacy (0.0.0.dfsg.1+cvs20070910-1) unstable; urgency=low
 
