* NOT RELEASED YET

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20070917-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 17 Sep 2007 14:36:36 +0200
+
 rt73-legacy (0.0.0.dfsg.1+cvs20070917-1) unstable; urgency=low
 
   * New upstream release:
