--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20071029-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 29 Oct 2007 15:36:36 +0100
+
 rt73-legacy (0.0.0.dfsg.1+cvs20071029-1) unstable; urgency=low
 
   * New upstream release:
