--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,6 +23,8 @@
  Changelog for 802.11g rt73 driver
 
  Version: CVS
+	* Propagate incomplete queue element, multi- context service drop fixes.
+	  Patch by Ben Hutchings.
 	* Fix vendor and product endian conversion in probe. Patch by chris_ppc
 	  extended to 2.4 conditional compile path.
 	* Fix 2.6 compile problem w/prev patch. Discovery/diagnosis/resolution
