--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-rt73-legacy (0.0.0.dfsg.1+cvs20071029-2) UNRELEASED; urgency=low
+rt73-legacy (0.0.0.dfsg.1+cvs20071031-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream release:
+    - Propagate Ben Hutchings's fixes for incomplete queue element,
+      multi- context service drop problems.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 29 Oct 2007 15:36:36 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 31 Oct 2007 02:05:49 +0100
 
 rt73-legacy (0.0.0.dfsg.1+cvs20071029-1) unstable; urgency=low
 
