--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20071031-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 31 Oct 2007 02:09:46 +0100
+
 rt73-legacy (0.0.0.dfsg.1+cvs20071031-1) unstable; urgency=low
 
   * New upstream release:
