--- a/THANKS
+++ b/THANKS
@@ -23,3 +23,4 @@ And Special thanks to those that have contributed to the project
 * James Elsdon - monkesys@westnet.com.au
 * dishkuvek
 * Ace17
+* Graham Gower - graham.gower@gmail.com
