--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-rt73-legacy (0.0.0.dfsg.1+cvs20071031-2) UNRELEASED; urgency=low
+rt73-legacy (0.0.0.dfsg.1+cvs20071109-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream release:
+    - provide interface name module option parameter.
+    - load firmware for 2.4 kernels. Patch by Graham Gower.
+    - Back out problem queue element, multi-context changes till fixed.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 31 Oct 2007 02:09:46 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 09 Nov 2007 02:32:29 +0100
 
 rt73-legacy (0.0.0.dfsg.1+cvs20071031-1) unstable; urgency=low
 
