--- a/THANKS
+++ b/THANKS
@@ -24,3 +24,4 @@ And Special thanks to those that have contributed to the project
 * dishkuvek
 * Ace17
 * Graham Gower - graham.gower@gmail.com
+* Adam Baker - aabaker@users.sf.net
