--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-rt73-legacy (0.0.0.dfsg.1+cvs20071109-2) UNRELEASED; urgency=low
+rt73-legacy (0.0.0.dfsg.1+cvs20071111-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream release:
+    - forward compatibility for 2.6.24. Thanks to Adam Baker.
+    - fix incomplete queue element, multi-context service drop fix.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 09 Nov 2007 02:34:11 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 11 Nov 2007 13:59:57 +0100
 
 rt73-legacy (0.0.0.dfsg.1+cvs20071109-1) unstable; urgency=low
 
