--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-rt73-legacy (0.0.0.dfsg.1+cvs20071111-2) UNRELEASED; urgency=low
+rt73-legacy (0.0.0.dfsg.1+cvs20071116-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream release:
+    - Fix big endian compiler variable propagation.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 11 Nov 2007 14:02:27 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 16 Nov 2007 00:56:20 +0100
 
 rt73-legacy (0.0.0.dfsg.1+cvs20071111-1) unstable; urgency=low
 
