--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20071116-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 16 Nov 2007 00:57:57 +0100
+
 rt73-legacy (0.0.0.dfsg.1+cvs20071116-1) unstable; urgency=low
 
   * New upstream release:
