--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-rt73-legacy (0.0.0.dfsg.1+cvs20071116-2) UNRELEASED; urgency=low
+rt73-legacy (0.0.0.dfsg.1+cvs20071120-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream release:
+    - fix NULL pointer exception.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 16 Nov 2007 00:57:57 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 20 Nov 2007 01:34:35 +0100
 
 rt73-legacy (0.0.0.dfsg.1+cvs20071116-1) unstable; urgency=low
 
