* NOT RELEASED YET

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20071124-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 24 Nov 2007 00:07:35 +0100
+
 rt73-legacy (0.0.0.dfsg.1+cvs20071124-1) unstable; urgency=low
 
   * New upstream release:
