--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rt73-legacy (0.0.0.dfsg.1+cvs20071207-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 07 Dec 2007 17:52:44 +0100
+
 rt73-legacy (0.0.0.dfsg.1+cvs20071207-1) unstable; urgency=low
 
   * New upstream release:
